objects/sfal__SAL_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>sfal__Advance_Notice__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Number of hours of advance notice required for an appointment.</description>
        <label>Advance Notice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfal__AdviseeSnapshotHeadlineFields__c</fullName>
        <defaultValue>2</defaultValue>
        <inlineHelpText>The number of fields whose values are displayed above the separator in the Advisee Snapshot. Fields are defined in the Advisee Snapshot Details field set.</inlineHelpText>
        <label>Advisee Snapshot Headline Fields</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfal__AdviseeSnapshotUseFieldSet__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use the Advisee Snapshot Details field set to customize the fields that display on the Advisee Snapshot.</inlineHelpText>
        <label>Customize Advisee Snapshot Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfal__Advisee_Record_RecordType__c</fullName>
        <defaultValue>&quot;AdviseeRecord&quot;</defaultValue>
        <description>The API name of the Case record type that identifies an advisee record Case.</description>
        <inlineHelpText>The API name of the Case record type that identifies an advisee record Case.</inlineHelpText>
        <label>Advisee Record Case Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfal__Advising_Event_RecordType__c</fullName>
        <description>The API name of the Event record type that identifies an advising appointment.</description>
        <inlineHelpText>The API name of the Event record type that identifies an advising appointment.</inlineHelpText>
        <label>Advising Event Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfal__Advising_Time_Event_RecordType__c</fullName>
        <description>The API name of the Event record type that identifies the designated times an advisor is available for appointments to be scheduled.</description>
        <inlineHelpText>The API name of the Event record type that identifies the designated times an advisor is available for appointments to be scheduled.</inlineHelpText>
        <label>Advising Time Event Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfal__AppointmentBuffer__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Time between back-to-back scheduled appointments to wrap up and prepare for the next.</description>
        <inlineHelpText>Time between back-to-back scheduled appointments to wrap up and prepare for the next.</inlineHelpText>
        <label>Appointment Buffer (minutes)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfal__Appointment_Email_Opt_In__c</fullName>
        <defaultValue>7</defaultValue>
        <description>This field should only be updated via the advisor settings component.</description>
        <label>Appointment Email Opt In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfal__Appointment_Emails__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Send email notifications to advisors and advisees when advising appointments are created or cancelled.</description>
        <inlineHelpText>Send email notifications to advisors and advisees when advising appointments are created or cancelled.</inlineHelpText>
        <label>Appointment Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfal__Appointment_Length__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Appointment length in minutes</description>
        <label>Appointment Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfal__Appointment_Locations__c</fullName>
        <defaultValue>&quot;In person;By phone&quot;</defaultValue>
        <label>Appointment Locations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sfal__ChosenFullNameField__c</fullName>
        <description>Display an advisee’s chosen name instead of their legal name in the Advisee Snapshot. Enter the API name of the field used for a chosen name, such as EDA’s ChosenFullNameField__c. If this setting or the specified field is blank, we display the Name field from the Contact record. To display the chosen name in other places, customize the associated page layouts.</description>
        <label>Chosen Full Name Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfal__DisableAdviseeAppointmentRecordLink__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, Appointment details displayed in the community don&apos;t include a link that opens the Appointment record detail page.</description>
        <inlineHelpText>When selected, Appointment details displayed in the community don&apos;t include a link that opens the Appointment record detail page.</inlineHelpText>
        <label>Disable Advisee Appointment Record Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfal__DisableEmailAttachmentsforAdvisees__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Email notifications sent to advisees don&apos;t include an .ics file, which is used for calendar updates.</inlineHelpText>
        <label>Disable Email Attachments for Advisees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfal__DisableEmailAttachmentsforAdvisors__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Email notifications sent to advisors don&apos;t include an .ics file, which is used for calendar updates.</inlineHelpText>
        <label>Disable Email Attachments for Advisors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfal__DisableEnhancedNotes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In the Appointment Manager, hide the Add Note action to prevent note-taking that creates Enhanced Notes.</description>
        <inlineHelpText>In the Appointment Manager, hide the Add Note action to prevent note-taking that creates Enhanced Notes.</inlineHelpText>
        <label>Disable Enhanced Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfal__EmailIDforAppointmentEmails__c</fullName>
        <description>This ID allows email notifications for appointments to be sent from a default From field. Don&apos;t enter an email address. Use Data Loader or Workbench to get the associated ID for the verified email address you entered on the OrgWideEmailAddress object.</description>
        <inlineHelpText>This ID allows email notifications for appointments to be sent from a default From field. Don&apos;t enter an email address. Use Data Loader or Workbench to get the associated ID for the verified email address you entered on the OrgWideEmailAddress object.</inlineHelpText>
        <label>Email ID for Appointment Emails</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfal__Enable_Alert_Mass_Status_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>On the advisee record Case, display a Change Status button in the Alerts related list to allow mass updates to the status of selected Alerts.</inlineHelpText>
        <label>Allow Mass Update in Alerts Related List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfal__ScheduledAvailabilityEventType__c</fullName>
        <defaultValue>&quot;Scheduled&quot;</defaultValue>
        <description>Type of Event indicating availability for appointments scheduled in advance.</description>
        <inlineHelpText>Type of Event indicating availability for appointments scheduled in advance.</inlineHelpText>
        <label>Scheduled Availability Event Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfal__WalkInAvailabilityEventType__c</fullName>
        <defaultValue>&quot;Walk-In&quot;</defaultValue>
        <description>Type of Event indicating availability for walk-in appointments.</description>
        <inlineHelpText>Type of Event indicating availability for walk-in appointments.</inlineHelpText>
        <label>Walk-In Availability Event Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfal__WalkIn_Event_Type__c</fullName>
        <defaultValue>&quot;Walk-In Appointment&quot;</defaultValue>
        <description>Type of Event indicating walk-in appointments.</description>
        <inlineHelpText>Type of Event indicating walk-in appointments.</inlineHelpText>
        <label>Walk-In Appointment Event Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SAL Hierarchy Settings</label>
</CustomObject>